--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -179,7 +179,7 @@
  FE_ALLOW_NAME_CHANGE:0 "Allow Province Name Change"
  FE_ALLOW_NAME_CHANGE_DESC:0 "Allows players to change names of provinces."
  MODIFIER_MONTHLY_PIETY:0 "Monthly Imperial Allegiance"
- MODIFIER_MONTHLY_KARMA:0 "Monthly Karma"
+ MODIFIER_MONTHLY_KARMA:0 "Monthly Fervor"
  blockaded:0 "Blockaded"
  SEND_OFFICERS_MARCH_TOO_BIG:0 "You can't send officers to a subject that has more than $PERC|Y$ of your development. They need to be less than $VAL|Y$ development."
  LEDGER_SCORE_AG:0 "Score through Ages"
@@ -346,8 +346,8 @@
  GOLDEN_ERA_ENACT:0 "A Golden Era lasts for $YEARS|Y$ years, and gives the following effects:\n$EFFECTS$\nPlease be aware that a Golden Era can only be enacted once by a country in a campaign."
  GOLDENAGETTITLE:0 "Start Golden Era!"
  PRESTIGE_FROM_CONV:0 "This increases our prestige by §G+$VAL$§!."
- KARMA_FROM_CONV:1 "This increases our Karma by §G+$VAL$§!."
- KARMA_FROM_CONV_CONFIRM:0 "Converting this province will increase our Karma by §G+$VAL$§!."
+ KARMA_FROM_CONV:1 "This increases our Fervor by §G+$VAL$§!."
+ KARMA_FROM_CONV_CONFIRM:0 "Converting this province will increase our Fervor by §G+$VAL$§!."
  MODIFIER_CAN_TRANSFER_VASSAL_WARGOAL:1 "Allows '§YTransfer Subject§!' Peace Treaty at half cost"
  MODIFIER_CAN_CHAIN_CLAIM:0 "Allow Claims Bordering Claims"
  MODIFIER_FREE_MAINTENANCE_ON_EXPL_CONQ:0 "No Maintenance on Exploring Leaders"
@@ -1616,10 +1616,10 @@
  PIETY_BAD_WAR_EFF:3 "Declaring war on a fellow $REL$ will move us towards Particularism by §Y$VAL$§!."
  PIETY_GOOD_WAR_EFF:2 "Declaring war on the $REL$ will move us towards Universalism by §Y$VAL$§!."
  KARMA_OFFENSIVE_WAR_EFF:0 "Declaring war is an inherently immoral action, and it will decrease our karma by §Y$VAL$§!. "
- KARMA_INCREASE:0 "This will give us §Y$VAL$§! karma."
- KARMA_DECREASE:0 "This will cost us §Y$VAL$§! karma."
- KARMA_INCREASE_FOR_COUNTRY:0 "This will give $COUNTRY$ §Y$VAL$§! karma."
- KARMA_DECREASE_FOR_COUNTRY:0 "This will cost $COUNTRY$ §Y$VAL$§! karma."
+ KARMA_INCREASE:0 "This will give us §Y$VAL$§! Fervor."
+ KARMA_DECREASE:0 "This will cost us §Y$VAL$§! Fervor."
+ KARMA_INCREASE_FOR_COUNTRY:0 "This will give $COUNTRY$ §Y$VAL$§! Fervor."
+ KARMA_DECREASE_FOR_COUNTRY:0 "This will cost $COUNTRY$ §Y$VAL$§! Fervor."
  patriarch_authority_local:0 "Zheng"
  patriarch_authority_global:0 "Zheng"
  COMBAT_IN_FRONTLINE:1 "§Y$STRENGTH$§W in first rank (Morale: §Y$MORALE$§W)\n"
@@ -4782,8 +4782,8 @@
  USES_NOT_PAPACY:0 "$COUNTRY|Y$ does NOT use Papacy."
  USES_BLESSINGS:0 "$COUNTRY|Y$ uses Teachings."
  USES_NOT_BLESSINGS:0 "$COUNTRY|Y$ does NOT use Teachings."
- USES_KARMA:0 "$COUNTRY|Y$ uses Karma."
- USES_NOT_KARMA:0 "$COUNTRY|Y$ does NOT use Karma."
+ USES_KARMA:0 "$COUNTRY|Y$ uses Fervor."
+ USES_NOT_KARMA:0 "$COUNTRY|Y$ does NOT use Fervor."
  USES_SYNCRETIC_FAITHS:0 "$COUNTRY|Y$ uses Syncretic Faiths."
  USES_NOT_SYNCRETIC_FAITHS:0 "$COUNTRY|Y$ does NOT use Syncretic Faiths."
  USES_CULTS:0 "$COUNTRY|Y$ uses Cults."
@@ -4835,7 +4835,7 @@
  LOOT_RECOVERY:0 "§Y$DELAY$§! days after the last looting, the province will start recovering by §G$PERCENTAGE$%§! monthly."
  LOOT_RECOVERY_DATE:0 "This province was last looted on §Y$LAST_LOOT_DATE$§!. It will start recovering by §G$PERCENTAGE$%§! monthly on §Y$FUTURE_LOOT_DATE$§!, unless it is looted again before that date."
  LOOT_CURRENTLY_RECOVERING:0 "This province is currently recovering by §G$PERCENTAGE$%§! monthly."
- CURRENT_KARMA:0 "Ruler Righteousness"
+ CURRENT_KARMA:0 "Ruler RighteousFervorness"
  PEACE_OFFER_POWER_PROJECTION_POS:0 "$TAG$ will gain §G$VAL$§! Power Projection."
  PEACE_OFFER_POWER_PROJECTION_NEG:0 "$TAG$ will lose §R$VAL$§! Power Projection."
  PEACE_OFFER_TRIBAL_ALLEGIANCE_POS:0 "$TAG$ will gain §G$VAL$§! Tribal Allegiance."
