--- a/localisation/goose_1_35_l_english.yml
+++ b/localisation/goose_1_35_l_english.yml
@@ -15,9 +15,9 @@
  PAPAL_INFLUENCE_EFFECT:0 "§YEffects from Papal Influence:§W"
  CHURCH_POWER_EFFECT:0 "§YEffects from Church Power:§W"
  FERVOR_VALUE_EFFECT:0 "§YEffects from Fervor:§W"
- KARMA_EFFECT:0 "§YEffects from Karma:§W"
- NEGATIVE_KARMA_EFFECT:0 "§YEffects from negative Karma:§W"
- POSITIVE_KARMA_EFFECT:0 "§YEffects from positive Karma:§W"
+ KARMA_EFFECT:0 "§YEffects from Fervor:§W"
+ NEGATIVE_KARMA_EFFECT:0 "§YEffects from negative Fervor:§W"
+ POSITIVE_KARMA_EFFECT:0 "§YEffects from positive Fervor:§W"
  mandate:0 "Mandate"
  imperial_authority_emperor:0 "Imperial Authority"
  imperial_authority_member:0 "Imperial Authority"
