--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -1730,7 +1730,7 @@
  NOT_HAS_NAVAL_DOCTRINE_OF_TYPE:0 "Does NOT have the $NAME$ Naval Doctrine"
  HAS_NAVAL_DOCTRINE:0 "Has a Naval Doctrine"
  NOT_HAS_NAVAL_DOCTRINE:0 "Does NOT have a Naval Doctrine"
- MODIFIER_MONTHLY_KARMA_ACCELERATOR:0 "Monthly Karma Accelerator"
+ MODIFIER_MONTHLY_KARMA_ACCELERATOR:0 "Monthly Fervor Accelerator"
  MODIFIER_MONTHLY_CHURCH_POWER:0 "Monthly Faith Power"
  MODIFIER_LOCAL_TRADE_COMPANY_INVESTMENT_COST:0 "Local Trade Company Investment Cost"
  MODIFIER_GLOBAL_DEFENDER_DICE_ROLL_BONUS:0 "Global Defender Dice Roll Bonus"
@@ -2194,7 +2194,7 @@
  CANNOT_DISMANTLE_UNSUBJUGATED_ELECTOR:0 "$COUNTRY|Y$ is neither Allied to us, nor one of our Subjects, nor has its Capital under our control."
  MODIFIER_COLONY_DEVELOPMENT_BOOST:0 "Colony Development Boost"
  FROM_PIRATE_HUNTING:0 "$CHANGE$ from Pirate Hunting in the Trade Node"
- KARMA_ACCELERATOR_DESC:0 "Karma accelerator effects - move Karma away from zero by $VAL|Y$ per month due to:"
+ KARMA_ACCELERATOR_DESC:0 "Fervor accelerator effects - move Fervor away from zero by $VAL|Y$ per month due to:"
  DIPLO_DAMAGED_SHIPS:0 "Ships are damaged: "
  AND_YEARLY_THE_FOLLOWING:0 "And changes by $VAL|Y1$ each year due to:\n$DESC$"
  HAS_NOT_UNEMBRACED_INSTITUTION:0 "Has NOT any unembraced institution."
