--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -21,6 +21,20 @@
  tummland_ideas:0 "Tummic Ideas"
  tummland_ideas_start:0 "Tummic Traditions"
  tummland_ideas_bonus:0 "Tummic Ambition"
+ idea_sointuva:0 "Sointuva"
+ idea_sointuva_desc:0 "Tummic culture is heavily tied to the folk religion often called Sointuva which is often characterized by the dualistic view of the world and importance of storytelling. We resisted conversion to sigilianism for more than a few centuries and even a wave of conversion to Liemarianism Sointuva remains an important aspect of their lives."
+ idea_modern_fortifications:0 "Modern Fortifications"
+ idea_modern_fortifications_desc:0 "Historically, most fortifications in these regions were build by the Ehren traders to protect their enterprise from raids or simply to exert power. Following the unification however some of these forts were abandoned. In order to protect against outside threats, these forts had to be updated to fit the modern standard. While most of them were improved by local fortification experts, some foreign specialist were invited, specifically from Nevledi and occupied Nifthem"
+ idea_syvametsa_frontier:0 "Syvämetsä Frontier"
+ idea_fur_traders:0 "Turkiskauppiaat"
+ idea_fur_traders_desc:0 "For most of Tummic history our goods were sold by the Ehren traders, making them our only window to the greated world. Now that we can finally have full economic freedom, our merchants travel around the world selling finest furs and supplies. Fur trade became so important to our economy that a whole new subgroup emerged among the trading guilds called turkiskauppiaat, literally translating to fur merchants. They quickly grew powerful in the country often even overshadowing some nobles."
+ idea_syvametsa_frontier_desc:0 "Free people of the deep forest persistently defended their land against the colonization and bussiness ventures, even as far as settling into our land. The need for large amounts of fur and valuable mining resources caused the Tummic state to invest into exploring and colonizing the deep forest at the beginning of the XVII century. Despite the opposition from most of the locals, few of them actually integrated into our society fairly well, providing much needed manpower."
+ idea_grand_fleet:0 "Grand Fleet"
+ idea_grand_fleet_desc:0 "There are only two ways to reach Tummland from Taedium - either go through the entirety of Kakigia or use the fleet. After securing the land connections, it was necessary to also maintain a large fleet able to fight off potential enemies wanting to threaten us. In 1526, even before the official unification, the Grand Arsenal of Kaitatie was rebuilt in order to prepare for the construction of our Grand Fleet."
+ idea_koskematon_maa:0 "Koskematon Maa"
+ idea_koskematon_maa_desc:0 "In order to more effectively manage the our sparsely populated northern lands, the law of Koskematon was proclaimed. It allowed for rich nobles to buy large swats of land with the local population to serve under them. This proved to be a great success by not only removing some of the administrative burden from the crown, but also encouraging landowners to try to increase profit from the land."
+ idea_grand_sotajoukko:0 "Grand Sotajoukko"
+ idea_grand_sotajoukko_desc:0 "Metsäväki originally wasn't willing to follow the laws of civilized state, but after years of our educational effort many of them finally integrated into our society and form not only the economic but also military backbone of our nation. Skilled hunters proved to be great generals and harsh winters created strong soldiers which are grateful that they can die protecting Tummland."
  
  piiriala_reform:0 "Piiriala"
  piiriala_reform_desc:0 "This government represents autocratic Lounaväki lordships of Kakigia which constantly face tribal raids."
