--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1683,10 +1683,10 @@
  PROV1682:0 "Vetikerk"
  PROV1683:0 "Aspijksteen"
  PROV1684:0 "Geinland"
- PROV1685:0 "Levtrop"
+ PROV1685:0 "Geluan"
  PROV1686:0 "Telapijk"
- PROV1687:0 "Montzandten"
- PROV1688:0 "Tutmeeray"
+ PROV1687:0 "Montekant"
+ PROV1688:0 "Retarn"
  PROV1689:0 "Targeelren"
  PROV1690:0 "Lehanaal"
  PROV1691:0 "Strichsen"
