fixes + start loc

--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -30,3 +30,19 @@
  silberhafen_haven_for_oppressed:0 "Haven for Oppressed"
  silberhafen_haven_for_oppressed_desc:0 "We stand as a protector of all people that are abused by their rulers or are exploited by neighboring powers. We won't stand this tyranny that is so common on this world. We will fight so all people on this globe can live in harmony."
 
+ #### Events
+
+ ## Missions
+
+ td_silberhafen.1.t:0 "National Reform"
+ td_silberhafen.1.desc:0 "Now that we have a new ruler that is open to new ideas, we should decide if we want to change our government and start to interact more with other countries or stay on our current course."
+ td_silberhafen.1.a:0 "We need to reform"
+ td_silberhafen.1.b:0 "Boring but peaceful life"
+
+ td_silberhafen.2.t:0 "Our Proposition"
+ td_silberhafen.2.desc:0 "Alliance with one of the argenian brothers will allow us to establish our diplomatic ties on the isles and help us in conquest of new lands. We decided to send to a northern argenian state. We will ally with them, we will help them conquer another nation and in return we will recieve some lands from them."
+ td_silberhafen.2.a:0 "Send it"
+
+ td_silberhafen.3.t:0 ""
+ td_silberhafen.3.desc:0 ""
+ td_silberhafen.3.a:0 ""
