--- a/localisation/TD_03_missions_silberhafen_l_english.yml
+++ b/localisation/TD_03_missions_silberhafen_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  ZIL_new_laws_title:0 "New Laws"
  ZIL_new_laws_desc:0 ""
+ td_silberhafen.7_tt:0 "We will be able to get argenian culture accepted or recieve diplomatic power if we already accept them."
 
  ZIL_proclaimation_of_equality_title:0 "Proclaimation of Equality"
  ZIL_proclaimation_of_equality_desc:0 ""
@@ -8,9 +9,11 @@
  ZIL_need_for_change_title:0 "Need for Change"
  ZIL_need_for_change_desc:0 ""
  ZIL_is_franz_dead_ctt:0 "Franz Moldenich doesn't rule Silberhafen"
+ td_silberhafen.1_tt:0 "We will be able to change our government reform to plutocracy or maintain our current course."
 
  ZIL_our_plans_title:0 "Our Plans"
  ZIL_our_plans_desc:0 ""
+ td_silberhafen.2_tt:0 "We will try to establish an alliance with northern argenian brother."
 
  ZIL_future_of_silberhafen_title:0 "Future of Silberhafen"
  ZIL_future_of_silberhafen_desc:0 ""
@@ -61,10 +64,6 @@
  silber_dorchians:0 "Dorchians"
  silber_dorchians_influence:0 "Dorchian Influence"
  silber_dorchians_FACTION_desc:0 "Our Dorchian Citizens"
-
- silber_tummics:0 "Tummics"
- silber_tummics_influence:0 "Tummic Influence"
- silber_tummics_FACTION_desc:0 "Our Tummic Citizens"
 
  silber_foreign_legions_reform:0 "Silberian Foreign Legions"
  silber_foreign_legions_reform_desc:0 "Most armies of Silberland are made from non-ehren citizens. Because of that our recruitment methods are focused in lands where argenians or dorchians live"
