--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -49,7 +49,7 @@
  dideyn_area:0 "Dideyn"
  bodaeyw_area:0 "Bodaeyw"
  randwerpen_area:0 "Randwerpen"
- lesser_nifthem_area:0 "Lesser nifthem"
+ lesser_nifthem_area:0 "Lesser Nifthem"
  upper_nifthem_area:0 "Upper Nifthem"
  magreinmond_area:0 "Magreinmond"
  ehrenschap_area:0 "Ehrenschap"
@@ -236,7 +236,7 @@
  outer_isles_area:0 "Outer Isles"
  ithag_area:0 "Ithag"
  ainaich_area:0 "Ainaich"
- lesser_ainaich_area:0 "Lesser ainaich"
+ lesser_ainaich_area:0 "Lesser Ainaich"
  oilethudhian_coast_area:0 "Oilethudhian Coast"
  ethelnothdun_area:0 "Ethelnothdun"
  nabhin_area:0 "Nabhin"
