event loc + fix

--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -38,11 +38,33 @@
  td_silberhafen.1.desc:0 "Now that we have a new ruler that is open to new ideas, we should decide if we want to change our government and start to interact more with other countries or stay on our current course."
  td_silberhafen.1.a:0 "We need to reform"
  td_silberhafen.1.b:0 "Boring but peaceful life"
+ ZIL_peaceful_times:0 "Peaceful Times"
+ desc_ZIL_peaceful_times:0 "todo"
 
  td_silberhafen.2.t:0 "Our Proposition"
  td_silberhafen.2.desc:0 "Alliance with one of the argenian brothers will allow us to establish our diplomatic ties on the isles and help us in conquest of new lands. We decided to send to a northern argenian state. We will ally with them, we will help them conquer another nation and in return we will recieve some lands from them."
  td_silberhafen.2.a:0 "Send it"
 
- td_silberhafen.3.t:0 ""
- td_silberhafen.3.desc:0 ""
- td_silberhafen.3.a:0 ""
+ td_silberhafen.3.t:0 "Silberian Proposition"
+ td_silberhafen.3.desc:0 "We recieved a message from Silberhafen about an alliance between our nations. They would help us to unite argenian nation but we would need to give them their claims in East Ende. Should we accept their proposition?"
+ td_silberhafen.3.a:0 "Accept it"
+ td_silberhafen.3.b:0 "We don't trust them"
+
+ td_silberhafen.4.t:0 "They accepted"
+ td_silberhafen.4.desc:0 "Our alliance proposition was accepted. Now we shall wait for our moment to strike."
+ td_silberhafen.4.a:0 "Hurrah"
+
+ td_silberhafen.5.t:0 "They declined"
+ td_silberhafen.5.desc:0 "Our alliance proposition was declined. We still won't drop our ambitions, it just means that we need to do it by ourselves."
+ td_silberhafen.5.a:0 "Preparations begin"
+ ZIL_we_are_alone:0 "We are Alone"
+ desc_ZIL_we_are_alone:0 "todo"
+
+ td_silberhafen.6.t:0 "Our Promise"
+ td_silberhafen.6.desc:0 "We hold one of the lands claimed by Silberhafen that we promised to give to them. We shall honour this deal."
+ td_silberhafen.6.a:0 "Ok"
+
+ td_silberhafen.7.t:0 "Tolerance in Silberland"
+ td_silberhafen.7.desc:0 "Because of our small population we can't push out or oppress other cultures. We also don't support those actions because that would be against values that our republic stands for. We need to start accepting Argenian people as normal citizens like Ehren people. Only then we can function like normal society."
+ td_silberhafen.7.a:0 "Our republic grows"
+ 
