--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -41,12 +41,12 @@
  ZIL_peaceful_times:0 "Peaceful Times"
  desc_ZIL_peaceful_times:0 "todo"
 
- td_silberhafen.2.t:0 "Our Proposition"
+ td_silberhafen.2.t:0 "Our Proposal"
  td_silberhafen.2.desc:0 "Alliance with one of the argenian brothers will allow us to establish our diplomatic ties on the isles and help us in conquest of new lands. We decided to send to a northern argenian state. We will ally with them, we will help them conquer another nation and in return we will recieve some lands from them."
  td_silberhafen.2.a:0 "Send it"
 
- td_silberhafen.3.t:0 "Silberian Proposition"
- td_silberhafen.3.desc:0 "We recieved a message from Silberhafen about an alliance between our nations. They would help us to unite argenian nation but we would need to give them their claims in East Ende. Should we accept their proposition?"
+ td_silberhafen.3.t:0 "Silberian Proposal"
+ td_silberhafen.3.desc:0 "We recieved a message from Silberhafen about an alliance between our nations. They would help us to unite argenian nation but we would need to give them their claims in East Ende. Should we accept their proposal?"
  td_silberhafen.3.a:0 "Accept it"
  td_silberhafen.3.b:0 "We don't trust them"
 
