--- a/localisation/TD_03_missions_silberhafen_l_english.yml
+++ b/localisation/TD_03_missions_silberhafen_l_english.yml
@@ -1,19 +1,20 @@
 ﻿l_english:
  ZIL_new_laws_title:0 "New Laws"
  ZIL_new_laws_desc:0 ""
- td_silberhafen.7_tt:0 "We will be able to get argenian culture accepted or recieve diplomatic power if we already accept them."
+ td_silberhafen.7_tt:0 "We will be able to get Argenian culture accepted or recieve diplomatic power if we already accept them."
 
- ZIL_proclaimation_of_equality_title:0 "Proclaimation of Equality"
- ZIL_proclaimation_of_equality_desc:0 ""
+ ZIL_proclamation_of_equality_title:0 "Proclamation of Equality"
+ ZIL_proclamation_of_equality_desc:0 ""
 
  ZIL_need_for_change_title:0 "Need for Change"
  ZIL_need_for_change_desc:0 ""
- ZIL_is_franz_dead_ctt:0 "Franz Moldenich doesn't rule Silberhafen"
+ ZIL_is_franz_dead_ctt:0 "Ruler is NOT §YFranz Moldenich§!"
  td_silberhafen.1_tt:0 "We will be able to change our government reform to plutocracy or maintain our current course."
 
  ZIL_our_plans_title:0 "Our Plans"
  ZIL_our_plans_desc:0 ""
- td_silberhafen.2_tt:0 "We will try to establish an alliance with northern argenian brother."
+ ZIL_our_plans_tt1:0 "If we managed to complete this mission through improving relations:"
+ td_silberhafen.2_tt:0 "We will try to establish an alliance with northern Argenian brother."
 
  ZIL_future_of_silberhafen_title:0 "Future of Silberhafen"
  ZIL_future_of_silberhafen_desc:0 ""
@@ -41,7 +42,7 @@
 
  ZIL_local_sailors_title:0 "Local Sailors"
  ZIL_local_sailors_desc:0 ""
- ZIL_local_sailors_explanation:0 "We will recieve 500 sailors and 1 light ship for each argenian province with dock or drydock"
+ ZIL_local_sailors_explanation:0 "Every province of Argenian culture with either a dock or a drydock will grant us §Y500§! sailors and §Y1§! light ship."
 
  ZIL_argenian_fleet_title:0 "Argenian Fleet"
  ZIL_argenian_fleet_desc:0 ""
@@ -66,5 +67,5 @@
  silber_dorchians_FACTION_desc:0 "Our Dorchian Citizens"
 
  silber_foreign_legions_reform:0 "Silberian Foreign Legions"
- silber_foreign_legions_reform_desc:0 "Most armies of Silberland are made from non-ehren citizens. Because of that our recruitment methods are focused in lands where argenians or dorchians live"
+ silber_foreign_legions_reform_desc:0 "Most armies of Silberland are made from non-ehren citizens. Because of that our recruitment methods are focused in lands where Argenians or Dorchians live"
 
