--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -68,3 +68,24 @@
  geniburgh_company_salary_reforms_desc:0 "In the early days of the company, salaries were only loosely organized with most profit coming from looting. If we want to maintain a growing army, our soldiers must be not only well fed, but also well paid."
  geniburgh_company_administrative_reforms:0 "Administrative Reforms"
  geniburgh_company_administrative_reforms_desc:0 "For the past decades granting Amagari autonomy was enough, but in order to more effectively manage our lands we have to establish a proper administration. "
+
+ NIEWEBEHATLAND:0 "Niewebehatland"
+ NIEWEBEHATLAND_ADJ:0 "Niewebehatian"
+
+ niewebehatland_ideas:0 "Niewebehatian Ideas"
+ niewebehatland_ideas_bonus:0 "Niewebehatian Ambition"
+ niewebehatland_ideas_start:0 "Niewebehatian Traditions"
+ niewebehatland_steppe_trade:0 "Steppe Trade"
+ niewebehatland_steppe_trade_desc:0 "Our position on the western shore of Kakigia allows us to control the flow of trade from Pemenia to Taedium. In order to not discourage foreign traders, we have to ensure that the goods can travel safely along protected routes, undisturbed by the Amagari."
+ niewebehatland_new_geniburgh_military_academy:0 "New Geniburgh Academy"
+ niewebehatland_new_geniburgh_military_academy_desc:0 "Due to gradual demilitarization of our nation, many leaders found themselves in an alien environment where they couldn't plunder they way to prosperity. Many of them settled in rural parts of the country and became nobles, but some decided to live in the capital city and establish a military academy to pass their knowledge to younger generations."
+ niewebehatland_colonisation_of_the_steppe:0 "Colonisation of the Steppe"
+ niewebehatland_colonisation_of_the_steppe_desc:0 "The wild east was for most history sparsely settled, even more so after the Bunelisuli invasion. Nowadays, many settlers are eager to claim this land for themselves."
+ niewebehatland_trans_religious_diplomacy:0 "Trans-Religious Diplomacy"
+ niewebehatland_trans_religious_diplomacy_desc:0 "When we first arrived in Zakarturia, local religious were foreign and strange to us. After some years we adapted and learned to take mercenary jobs from variety of states of different religions. This tradition remains to this day giving advantage over many overzealous countries. "
+ niewebehatland_niebelhartar_infantry:0 "Niebelhartar Infantry"
+ niewebehatland_niebelhartar_infantry_desc:0 "Based off of the Wymondian infantry and influenced by Zakarturi pikes, niebelhartar infantry was a scourge of Kakigia, striking fear in the enemy even before the battle started. Now with increased manpower and economic power we can finally make it a backbone of our army."
+ niewebehatland_reformed_bureaucracy:0 "Reformed Bureaucracy"
+ niewebehatland_reformed_bureaucracy_desc:0 "Feudalism never really established itself in Niewebehatland. Compared to most states, we weren't bonded by ancient traditions and contracts, but only meritocratic recruitment and skill. Now our country leads as an example of modern and functional bureaucracy."
+ niewebehatland_kakigian_mines:0 "Kakigian Mines"
+ niewebehatland_kakigian_mines_desc:0 "Resources hidden deep within the Dasarali and Digacopian mountains are valuable not only for their exceptional quality, but also sheer quantity. Gold and silver is used to mint coins used across the continent and steel fuels our war machine.w"
