--- a/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
+++ b/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
@@ -2,6 +2,7 @@
  rah_jadid_incident_recent_tooltip:0 "Recent incident was 25 years ago"
 
  isolationism_label_rah_jadid:0 "Cohesion"
+ isolationism_label_rah_jadid_tt:0 "Cohesion represents unity between Rah Jadidi and local faiths. Higher the cohesion, the more tolerant and more syncretic the clergy and the population is towards heathens. Lower levels might however cause provinces to revert to their original faith."
 
  rah_jadid_isolationism_0_tt:0 "§YFrankrani Laws§!\nOfficial doctrines consist of original Ilumist and Frankrani beliefs with marginal syncretism.\n---\nThis is your current level of §YCohesion§!. It grants you:\n\n Manpower in True Faith provinces:§G +10.0%§!\n Cost of Advisors with Ruler's Religion:§G -10.0%§!\n Tolerance of Heathens:§R -2.00§!"
  rah_jadid_isolationism_0_ttb:0 "§YFrankrani Laws§!\nOfficial doctrines consist of original Ilumist and Frankrani beliefs with marginal syncretism.\n---\nIf you reach this level of §YCohesion§! it will grant you:\n\n Manpower in True Faith provinces:§G +10.0%§!\n Cost of Advisors with Ruler's Religion:§G -10.0%§!\n Tolerance of Heathens:§R -2.00§!"
