--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -22,3 +22,6 @@
 
  TAEDIUM_HENGTUA_BOOKMARK_TITLE:0 "The Far East"
  TAEDIUM_HENGTUA_BOOKMARK_DESC:0 ""
+
+ TAEDIUM_SAMADIA_BOOKMARK_TITLE:0 "Merchants and Zealots"
+ TAEDIUM_SAMADIA_BOOKMARK_DESC:0 "REPLACE_ME"
