--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -14,3 +14,4 @@
  northern_venatia_superregion:0 "Northern Venatia"
  bunelisulia_superregion:0 "Bunelisulia"
  hengtua_superregion:0 "Hengtua"
+ cakrawalunia_superregion:0 "Cakrawalunia"
