--- a/localisation/TD_tradegoods_l_english.yml
+++ b/localisation/TD_tradegoods_l_english.yml
@@ -27,8 +27,8 @@
  saltDESC:0 "Salt is essential for human life. In addition it was the most common means to preserve food for the long winter months. It was either mineral, brought from mines in Silvestria, or natural, from salt marsh production via evaporation along sunny coastlines."
  slaves:0 "Slaves"
  slavesDESC:0 "Slaves had been a trading commodity since Antiquity but demand increased sharply in the late 16th century when Slaves offered one of the cheapest sources of labor for European plantations in the Americas."
- spices:0 "Spices" #todo
- #spicesDESC:0 "Spices were known in Europe since ancient times, mostly for their medicinal value, and for their ability to improve the taste of food. Pepper, ginger, nutmeg, chili, cinnamon, etc. came partly from East Africa but mostly from India, China, and the Spice Islands, to be traded in Alexandria or the other terminals of the great caravan roads. The European desire for cheaper and more direct supply constituted the main motivation for the very first eastbound sea voyages of discoveries for Portugal."
+ spices:0 "Spices"
+ spicesDESC:0 "Spices were known in the west since ancient times, mostly for their medicinal value, and for their ability to improve the taste of food. Pepper, ginger, nutmeg, chili, cinnamon, etc. came partly from Sahila but mostly from Samadia, Hengtua, and Cakrawalunia, to be traded in Fravasum or the other terminals of the great caravan roads. The Taedian desire for cheaper and more direct supply constituted as the main motivation for restoring trade routes to the west by Ignidunta."
  sugar:0 "Sugar"
  sugarDESC:0 "Sugar was used not only as a sweetener but also for food preservation. The sugar cane was the only known means of obtaining sugar at this time and had been grown initially in some Arkabili islands. But the labor-intensive plantation system in the New World, especially in the Ardwajdi and Venatia, would soon move the major production sources overseas."
  tea:0 "Tea"
@@ -45,8 +45,8 @@
  tropical_woodDESC:0 "Used for everything from chess pieces to high quality furniture, tropical woods have always been considered an expensive and exclusive commodity. While many of these wood types would be new to the Taedian market the demand soon rose and the trafficking of Mahogany, Teak, Ebony or other rare woods soon became a major business."
  dyes:0 "Dyes"
  dyesDESC:0 "For as long as textiles have been woven there has been a market for fine dyes. During the late middle ages expensive dyes such as Indigo would be worth a fortune due to how distant the source in Samadia was.\nAs the world opened up dyes became easier to get hold of, both through the possibilities to produce them in the New World and the greater accessibility of the Samadian market. Nonetheless dyes remained rare and in the early 19th century, as the dye plantations in Samadia fell into Taedian hands, a veritable gold rush ensued."
- silk:0 "Silk" #todo
- #silkDESC:0 "The finest of all fabrics of the east was the silk produced in India, China and East Asia. While less iconic than spices the profits from silk and finely woven cotton cloth would in fact soon dwarf those of the spice trade for the European East India Companies.\nDue to increasing demand attempts were also made to produce the material locally in Mercantilist Europe, with very varied degrees of success."
+ silk:0 "Silk"
+ silkDESC:0 "The finest of all fabrics of the east was the silk produced in Hengtua and west Samadia. While less iconic than spices the profits from silk and finely woven cotton cloth would in fact soon dwarf those of the spice trade for the taedian trade companies.\nDue to increasing demand attempts were also made to produce the material locally in Kakigia and Taedium, with very varied degrees of success."
  incense:0 "Incense"
  incenseDESC:0 "To spread smoke and fragrance through the burning of materials has been common in ceremonial practices for centuries. Frankincense, Agarwood, Sandalwood, Myhrr and other goods suited for this use can be found in few places and their diffusion was an integral part in the formation of trade networks such as the Silk Road or the fittingly named Incense Route. "
  livestock:0 "Livestock"
@@ -55,8 +55,8 @@
  glassDESC:1 "Glass has been valued for centuries as a useful material for art, architecture, or simply the crafting of vessels for daily use. Eventually, as glass-making techniques improved, glass would also become crucial to the scientific field of optics, with glass lenses being used in the fabrication of spectacles, telescopes, and a plethora of other devices with wide-ranging applications from maritime navigation to the natural sciences."
  paper:0 "Paper"
  paperDESC:0 "Paper is a necessity for all types of advanced accounting, administration and diffusion of knowledge and the process of its production was originally devised in far east and then slowly made its way to all corners of the Old World. Far superior to other types of writing materials such as parchment the large scale production of paper requires a specialized set of skills and equipment, making it a rare and sought after commodity."
- gems:0 "Gems" #todo
- gemsDESC:0 "Since the earliest times, stones such as rubies, sapphires, diamonds, emeralds, jade, or pearls, have been used in jewelry and ceremonial attire. For centuries the only source of diamonds in the world were the fabled mines at Golconda. While not all precious stones are as rare, they are all highly sought after commodities."
+ gems:0 "Gems"
+ gemsDESC:0 "Since the earliest times, stones such as rubies, sapphires, diamonds, emeralds, jade, or pearls, have been used in jewelry and ceremonial attire. While not all precious stones are as rare, they are all highly sought after commodities."
  coal:0 "Coal"
  coalDESC:0 "Coal has a long history as a source of fuel, but it is not until the invention and dissemination of the practical Steam Engine that demand would take off. As the Industrial Revolution swept across the World, the use and export or import of coal would become a major business and an integral part of a modern economy."
  cloves:0 "Cloves" #todo
