dashavi ideas + fixes

--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -41,3 +41,21 @@
 
  TD_hordes_steppe_unity:0 "Steppe Unity"
  desc_TD_hordes_steppe_unity:0 "Individual clans have finally been united into one state to rule them all."
+
+ steppe_ideas:0 "Steppe Ideas"
+ steppe_ideas_bonus:0 "Steppe Ambition"
+ steppe_ideas_start:0 "Steppe Traditions"
+ steppe_born_to_the_saddle:0 "Born to the Saddle"
+ steppe_born_to_the_saddle_desc:0 "Horses are the backbone of nomad societies because they not only allow for fast movement and communication, but also are dangerous weapons against our enemies."
+ steppe_loot_economy:0 "Loot Economy"
+ steppe_loot_economy_desc:0 "While some hordes embraced trade as their primary source of income, vast majority still sees plundering as a great enterprise."
+ steppe_rapid_modernisation:0 "Rapid Modernisation"
+ steppe_rapid_modernisation_desc:0 "In order to not drastically fall behind our neighbours who learn how to counter our tactics, we also need to improve our troops and view of the world."
+ steppe_military_culture:0 "Military Culture"
+ steppe_military_culture_desc:0 "Surviving in the harsh tribal climate requires not only the strength of body but also the strength of the will. This makes most of our population great warriors, able to sustain most injuries."
+ steppe_resettlement_efforts:0 "Resettlement Efforts"
+ steppe_resettlement_efforts_desc:0 "As the horde expands, many do not join the host on the frontiers, but rather decide to live a more peaceful land, grazing cattle and even sometimes embracing agriculture."
+ steppe_unexploited_lands:0 "Unexploited Lands"
+ steppe_unexploited_lands_desc:0 "While the Gisian basin itself was densely populated, rest of the steppe remained largely untouched by human hands. This virgin land holds many treasures that wait for us to discover them."
+ steppe_horde_administration:0 "Horde Administration"
+ steppe_horde_administration_desc:0 "While administration might not be the right word to describe internal situation of the hordes, it still effectively manages to hold and maintain large swats of land with relatively small autonomy."
