--- a/localisation/TD_03_missions_silberhafen_l_english.yml
+++ b/localisation/TD_03_missions_silberhafen_l_english.yml
@@ -21,7 +21,7 @@
  SILBERLAND:0 "Silberland"
  SILBERLAND_ADJ:0 "Silberlander"
 
- ZIL_armies_of_silberhafen_title:0 "Armies of Silberhafen"
+ ZIL_armies_of_silberhafen_title:0 "Armies of Silberland"
  ZIL_armies_of_silberhafen_desc:0 ""
  unlock_silber_foreign_legions_tt:0 "Unlocks the government reform §YSilberian Foreign Legions§!."
 
