--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -21,4 +21,8 @@
  LOADING_TIP_19:0 "Absolutist monarchy of Bogiland of the XVII century became a role-model for other powerful states in Taedium."
  LOADING_TIP_20:0 "Many people in Tummland believe that Ehrenis are the literal servants of evil spirit Ilkeä."
  LOADING_TIP_21:0 "King Pepik 'The Mad' owned 2 boars, 3 camels and an elephant."
- 
+
+ LOADING_TIP_22:0 "After the fall of the Bunelisuli Empire the throne was usurped by the two younger brothers of the legitimate khan - Markörgis Ariunuulyn."
+ LOADING_TIP_23:0 "The Hengtuan nations widely embraced gunpowder warfare much earlier than Taedium, but it was the west that perfected the technology."
+ LOADING_TIP_24:0 "Cities of Lameng were established after mass exodus of people trying to flee from Huangche autocrats."
+ LOADING_TIP_25:0 "Empire of Paradevari protected Samadia from tribal raids for most of its history - up until Bunelisuli invasion."
