--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -67,4 +67,9 @@
  td_silberhafen.7.t:0 "Tolerance in Silberland"
  td_silberhafen.7.desc:0 "Because of our small population we can't push out or oppress other cultures. We also don't support those actions because that would be against values that our republic stands for. We need to start accepting Argenian people as normal citizens like Ehren people. Only then we can function like normal society."
  td_silberhafen.7.a:0 "Our republic grows"
+
+ td_silberhafen.8.t:0 "Exodus of Nifthemians"
+ td_silberhafen.8.desc:0 "Because of Ehren conquest of Nifthem a lot of refugees started to come to our country to seek refugee. After some time a big community of Nifthemian citizens started to advocate for idea of their own city based on our Silberhafen. They want to name it Zilverpoort and establish their own community there, we can allow it to happen or send them all to Silberhafen to expand it instead."
+ td_silberhafen.8.a:0 "Let them establish Zilverpoort"
+ td_silberhafen.8.b:0 "Send them to Silberhafen"
  
