--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -28,6 +28,10 @@
  kapshul_estuary_modifier:0 "Kapshul Estuary"
  mazexran_estuary_modifier:0 "Mazexran Estuary"
  paleumul_estuary_modifier:0 "Paleumul Estuary"
+ janma_estuary_modifier:0 "Janma Estuary"
+ upacaya_estuary_modifier:0 "Upacaya Estuary"
+ pradhana_estuary_modifier:0 "Pradhana Estuary"
+ valvu_estuary_modifier:0 "Valvu Estuary"
 
  uzkolian_toll:0 "Uzkolian Toll"
  hre_imperial_road:0 "Imperial Road"
