donucakar flavour privilege

--- a/localisation/TD_01_flavour_donucakar_l_english.yml
+++ b/localisation/TD_01_flavour_donucakar_l_english.yml
@@ -19,3 +19,7 @@
 
  sugilin_kingdom_reform:0 "Sügilin Kingdom"
  sugilin_kingdom_reform_desc:0 "Open-arms approach to the new faith of Saelianism in early history of Donuçakar has led to the strengthened position of the clergy."
+
+ estate_nobles_kanlabi_defeatism:0 "Kanlabi Defeatism"
+ estate_nobles_kanlabi_defeatism_desc:0 "After staggering defeat in the Kanlabi fields our nobility fears any incoming encounter with the enemy."
+ DON_newfound_confidence:0 "Newfound Confidence"
