--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -980,7 +980,7 @@
  PROV979:0 "Sabir" #saber
  PROV980:0 "Horian Depths"
  PROV981:0 "Arak" #cavern
- PROV982:0 "982"
+ PROV982:0 "Central Amsulan Gulf"
  PROV983:0 "983"
  PROV984:0 "984"
  PROV985:0 "Fawud"
@@ -1796,10 +1796,10 @@
  PROV1795:0 "1795"
  PROV1796:0 "1796"
  PROV1797:0 "1797"
- PROV1798:0 "1798"
+ PROV1798:0 "Valvu Estuary"
  PROV1799:0 "1799"
- PROV1800:0 "1800"
- PROV1801:0 "1801"
+ PROV1800:0 "Saryanan Bay"
+ PROV1801:0 "Malailumi Coast"
  PROV1802:0 "1802"
  PROV1803:0 "1803"
  PROV1804:0 "1804"
@@ -1873,7 +1873,7 @@
  PROV1872:0 "1872"
  PROV1873:0 "1873"
  PROV1874:0 "Husehe"
- PROV1875:0 "1875"
+ PROV1875:0 "Niraikali Coast"
  PROV1876:0 "Yesateu"
  PROV1877:0 "Alikaske"
  PROV1878:0 "Jarithan Coast"
