--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1126,3 +1126,26 @@
  SHI_ADJ:0 "Shiroshan"
  KWO:0 "Kwokuen"
  KWO_ADJ:0 "Kwokuenian"
+
+ JAN:0 "Janmag"
+ JAN_ADJ:0 "Janmagi"
+ PHR:0 "Phraguna"
+ PHR_ADJ:0 "Phragunan"
+ THA:0 "Thamdana"
+ THA_ADJ:0 "Thamdanan"
+ KHI:0 "Khintara"
+ KHI_ADJ:0 "Khintaran"
+ LEN:0 "Lenthanu"
+ LEN_ADJ:0 "Lenthanuan"
+ MAJ:0 "Mahjipang"
+ MAJ_ADJ:0 "Mahjipangi"
+ KHM:0 "Khaamgan"
+ KHM_ADJ:0 "Khaamgani"
+ KHW:0 "Khuwran"
+ KHW_ADJ:0 "Khuwrani"
+ SIA:0 "Siangen"
+ SIA_ADJ:0 "Siangeni"
+ KHO:0 "Khombun"
+ KHO_ADJ:0 "Khombuni"
+ NAA:0 "Naangar"
+ NAA_ADJ:0 "Naangari"
