formables + names + climate

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1167,3 +1167,7 @@
  KAM_ADJ:0 "Kaumceian"
  XTA:0 "Xtangun"
  XTA_ADJ:0 "Xtanguni"
+ LIA:0 "Liajnragana"
+ LIA_ADJ:0 "Liajnragani"
+ PGN:0 "Pagnyachada"
+ PGN_ADJ:0 "Pagnyachadi"
