--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -142,3 +142,5 @@
  
  kwokuen_republic_reform:0 "Kwokuen Republic"
  kwokuen_republic_reform_desc:0 "Following the doctrines of the Senkoi school, rulers live amongst the peasantry."
+
+ zoeng_toll:0 "Zoeng Toll"
