--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -126,7 +126,7 @@
  hengtua_abandoned_roots:0 "Abandoned Roots"
  hengtua_true_faith_ruler:0 "True Faith Ruler"
 
- hengtua.100.t:0 "Choosing our philosophy"
+ hengtua.100.t:0 "Choosing our Philosophy"
  hengtua.100.desc:0 "Changing situation in our country led us to a crossroad where we must select our path. From hundreds of schools of Hengtuan philosophy there remain 6 which are of great influence. Which of these shall build our nation?"
  hengtua.100.a:0 "I'm a bot beep bop"
  hengtua.100.b:0 "Taamtau School"
@@ -144,3 +144,13 @@
  kwokuen_republic_reform_desc:0 "Following the doctrines of the Senkoi school, rulers live amongst the peasantry."
 
  zoeng_toll:0 "Zoeng Toll"
+
+ estate_church_harmony_of_schools:0 "Harmony of Schools"
+ estate_church_harmony_of_schools_desc:0 "We must learn to appreciate other schools of thought as if they were just as right as our own."
+ enable_changing_schools_tt:0 "Enable changing schools of thought"
+ disable_changing_schools_tt:0 "Disable changing schools of thought"
+
+ TD_change_school_tt:0 "Change School of Thought"
+ has_enabled_changing_schools:0 "Has enabled changing schools"
+ TD_recently_changed_schools_modifier:0 "Recently Changed Schools"
+ desc_TD_recently_changed_schools_modifier:0 "Our monarch decided to lead us on a new path which caused some internal unrest."
