--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -15,3 +15,4 @@
  bunelisulia_superregion:0 "Bunelisulia"
  hengtua_superregion:0 "Hengtua"
  cakrawalunia_superregion:0 "Cakrawalunia"
+ south_pemenia_superregion:0 "South Pemenia"
