--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -90,3 +90,4 @@
  okukaiga_tradenode:0 "Okukaiga"
  toishima_tradenode:0 "Toishima"
  khemdan_tradenode:0 "Khemdan"
+ pasmangala_tradenode:0 "Pasmangala"
