--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -1,30 +1,31 @@
 ﻿l_english:
- city_of_capira:0 "Ancient City of Capiranella"
- city_of_capira_desc:0 "This ancient settlement was once a glorious capital of the Saelian Empire and subsequently the center of Saelian faith. Today the city lies in ruins and is mostly abandoned due to frequent pillaging, raids and overall lack of care."
- league_of_capira_reform:0 "League of Capira"
- league_of_capira_reform_desc:0 "Capiranellan League was founded due to growing threat of chilverchian nations quickly expanding into Camaria. It functions mostly as military alliance with high degree of autonomy for member states"
- LEAGUE:0 "League"
- GRAND_LEAGUE:0 "Grand League"
- PRIMO:0 "Primo"
- PRIMA:0 "Prima"
+ 
+ #### ideas
 
- compagne:0 "Compagne"
- compagne_long_desc:0 "Compagni di Guerra are members of our league established to protect western camaria from conflict."
- compagne_title:0 "Compagno di Guerra"
- compagne_title_plural:0 "Compagnes"
- compagne_is_our:0 "$NAME|Y$ is our Compagne"
- is_compagne:0 "Is Compagne"
- cancel_compagne_title:0 "Cancel Compagne"
- cancel_compagne_tooltip:0 "Leave the league lead by [From.GetName]"
- cancel_compagne_desc:0 "Leaving the League will reduce opinion of all League members (including the leader) of us by §R50§!."
- 
- compagne_modifier:0 "Compagne di Guerra"
- compagne_overlord_modifier:0 "Compagne di Guerra"
- 
+ ## generic
 
  group_camarian_ideas:0 "Camarian Minor Ideas"
  group_camarian_ideas_start:0 "Camarian Minor Traditions"
  group_camarian_ideas_bonus:0 "Camarian Minor Ambition"
+
+ camaria_peasant_army:0 "Peasant Army"
+ camaria_peasant_army_desc:0 "Freedom for the peasants estate helps us in mobilisation of additional men to our army. They are convinced that them joining our armies, it helps maintain our freedoms"
+ camaria_egalitarian_society:0 "Egalitarian Society"
+ camaria_egalitarian_society_desc:0 "People here don't care about your gender, or religion. Many women are working in important governmental positions and different churches are operating in the same area."
+ camaria_sensible_government:0 "Sensible Government"
+ camaria_sensible_government_desc:0 "By listening to all citizens we can understand their problems and very quickly try to solve them. It also makes them trust more in our governance"
+ camaria_third_estate_solidarity:0 "Third Estate Solidarity"
+ camaria_third_estate_solidarity_desc:0 "Peasants in our land are very often in communities, they work together, help eachother and live in harmony. Because of that a lot of spies not familiar with that lifestyle are very quickly catched."
+ camaria_fattoria_nobiliare:0 "Fattoria Nobiliare"
+ camaria_fattoria_nobiliare_desc:0 "With low number of nobles in our lands they hold massive arable fields. With their cooperation with local peasants it allows to coordinate massive farms that can produce more than fragmented estates"
+ camaria_new_era_of_trade:0 "New Era of Trade"
+ camaria_new_era_of_trade_desc:0 "Previously Ehrenstaat and their trade league dominated trade on entire continent. But with slow formation of our own merchant class and high production of goods we were able to become a center of trade in Taedium."
+ camaria_nationalistic_fervor:0 "Nationalistic Fervor"
+ camaria_nationalistic_fervor_desc:0 "Saelian Empire from the north, Chilverchia from the east and various sailors from west-south. These all influences tried to take control of our lands and use our hands and resources to help their goals. But we, people of Camaria will stand together against all aggressors!"
+
+ #### stuff
+
+ ## idk man
 
  establish_new_mine_title:0 "Build a new Gold Mine"
  establish_new_mine_desc:0 "There are rumors of potential gold underneath a town of Rivelea at the foot of the western Cacumuds. If we invest in the efforts to find it it might benefit our economy and secure our own gold supply."
