--- a/localisation/TD_01_flavour_chilverchia_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchia_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 ## Ideas
- group_chilverchian_ideas:0 "Chilverchian Group Ideas"
- group_chilverchian_ideas_start:0 "Chilverchian Group Traditions"
- group_chilverchian_ideas_bonus:0 "Chilverchian Group Ideas"
+ group_chilverchian_ideas:0 "Chilverchian Minor Ideas"
+ group_chilverchian_ideas_start:0 "Chilverchian Minor Traditions"
+ group_chilverchian_ideas_bonus:0 "Chilverchian Minor Ambition"
 
  chilverchia_renowned_military:0 "Renowned Military"
  chilverchia_renowned_military_desc:0 "Our armies are one of the most known in entire Taedium. Their arrival on the battlefield can turn the tide of the battle or guarantee total success against our opponents."
