Austronesian countries part 2
Added missing 3 countries, did localisation of stuff. Still not finished.

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -447,3 +447,10 @@
  nrunga:0 "Nrunga"
  dab:0 "Dab"
  nramna:0 "Nramna"
+ 
+ cak_kecig_group:0 "Cak'kecig"
+ bhariew:0 "Bhariew"
+ dinmuzelag:0 "Dinmuzelag"
+ debek:0 "Debek"
+ bachebil:0 "Bachebil"
+ dac_kwan:0 "Dac Kwan"
