--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -399,3 +399,11 @@
  gajifeng_spiritualism_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  gajifeng_spiritualism_rebels_army:0 "$RELIGION$ Army"
  gajifeng_spiritualism_rebels_demand:0 "Convert $COUNTRYNAME$"
+ 
+ bjateel_animism:0 "Bjateel Animism"
+ bjateel_animism_religion_desc:0 "Local Animism flavour that believe animals are aspects of gods. Do better Description (WIP)."
+ bjateel_animism_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ bjateel_animism_rebels_title:0 "Religious"
+ bjateel_animism_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ bjateel_animism_rebels_army:0 "$RELIGION$ Army"
+ bjateel_animism_rebels_demand:0 "Convert $COUNTRYNAME$"
