--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1179,3 +1179,18 @@
  PYA_ADJ:0 "Pyaari"
  SAK:0 "Sakar"
  SAK_ADJ:0 "Sakari"
+ 
+ BNB:0 "Bnai Byniev"
+ BNB_ADJ:0 "Bnai Bynievi"
+ KBN:0 "Kabonen"
+ KBN_ADJ:0 "Kabonenian"
+ TSG:0 "Tisaglibets"
+ TSG_ADJ:0 "Tisaglibetsi"
+ TRG:0 "Tarag'nomabg"
+ TRG_ADJ:0 "Tarag'nomabgi"
+ GEJ:0 "Gejshuuqooy"
+ GEJ_ADJ:0 "Gejshuuqooyi"
+ SDH:0 "Sur'dmbag Hakl"
+ SDH_ADJ:0 "Sur'dmbag Hakli"
+ KRT:0 "Kae'rm Taratam"
+ KRT_ADJ:0 "Kae'rm Taratami"
