--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -15,6 +15,7 @@
  USRA:0 "Usra"
  GRAND_USRA:0 "Grand Usra"
  GRAND_USRA:0 "Grand Usra"
+ #Why is it localised twice? - Kazuma
  ABUSRA:0 "Abusra"
  GRAND_ABUSRA:0 "Grand Abusra"
  AMUSRA:0 "Grand Amusra"
@@ -117,3 +118,9 @@
 
  terivi_nallennam_reform:0 "Terivi Nallennam"
  terivi_nallennam_reform_desc:0 "I hate nobles, peasants are my new bffs"
+ 
+ matrilineal_monarchy_reform:0 "Matrilineal Monarchy"
+ matrilineal_monarchy_reform_desc:0 "I love being ruled by women."
+ PRINCESSDOM:0 "Princessdom"
+ MATRIARCHATE:0 "Matriarchate"
+ GRAND_MATRIARCHATE:0 "Grand Matriarchate"
