--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -391,6 +391,13 @@
  xifang_rebels_army:0 "$RELIGION$ Army"
  xifang_rebels_demand:0 "Convert $COUNTRYNAME$"
 
+ cach_moi:0 "Xifang"
+ cach_moi_religion_desc:0 "\nAll Hengtuan religions share a concept of Zheng, which represents ruler's legitimacy, competency and approval by heaven, but many scholars disagree on what is the most blessed government."
+ cach_moi_rebels_title:0 "Religious"
+ cach_moi_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ cach_moi_rebels_army:0 "$RELIGION$ Army"
+ cach_moi_rebels_demand:0 "Convert $COUNTRYNAME$"
+
  gajifeng_spiritualism:0 "Gajifeng Spiritualism"
  gajifeng_spiritualism_religion_desc:0 "Gajifeng Spiritualism is a bulk term for different sects and beliefs practiced by the Tsakung people in Dasenli and neighboring areas. They put a great importance in respecting the dead who are said to roam the countryside."
  henchu:0 "Henchu"
@@ -399,6 +406,15 @@
  gajifeng_spiritualism_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  gajifeng_spiritualism_rebels_army:0 "$RELIGION$ Army"
  gajifeng_spiritualism_rebels_demand:0 "Convert $COUNTRYNAME$"
+
+ dejilobi:0 "Gajifeng Spiritualism"
+ dejilobi_religion_desc:0 ""
+ henchu:0 "Henchu"
+ dejilobi_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ dejilobi_rebels_title:0 "Religious"
+ dejilobi_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ dejilobi_rebels_army:0 "$RELIGION$ Army"
+ dejilobi_rebels_demand:0 "Convert $COUNTRYNAME$"
  
  bjateel_animism:0 "Bjateel Animism"
  bjateel_animism_religion_desc:0 "Local Animism flavour that believe animals are aspects of gods. Do better Description (WIP)."
