--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -28,19 +28,26 @@
  gajifeng_chiefdom_reform:0 "Gajifeng Chiefdom"
  gajifeng_chiefdom_reform_desc:0 "Beautiful jungle of Dasenli made local tribes not only incredibly religious, but also skilled in traversing harsh terrain."
 
-  danshu_school:0 "Danshu"
+ danshu_school:0 "Danshu"
+ danshu_school_modifier:0 "Danshu Influences"
  danshu_school_desc:0 "Followers of Danshu School believe that ruler must rule alone and decentralization will only lead to corruption and particularism.\n§YPreferred governments:§! Monarchy"
  taowang_school:0 "Taowang"
+ taowang_school_modifier:0 "Taowang Influences"
  taowang_school_desc:0 "Followers of Taowang School believe that nature and natural order are much more sacred compared to the other schools and thus ruler's duty is to protect nature and avoid interventing in people's lives.\n§YPreferred governments:§! Any"
  shenting_school:0 "Shenting"
+ shenting_school_modifier:0 "Shenting Influences"
  shenting_school_desc:0 "Followers of Shenting School elevate ruler to the status of godhood, but that comes with additional responsibilities and burdens.\n§YPreferred governments:§! Theocracy"
  haanping_school:0 "Haanping"
+ haanping_school_modifier:0 "Haanping Influences"
  haanping_school_desc:0 "Followers of the Haanping school believe that a good ruler must be be an eloquent diplomant or a poet and only resolve conflict through mediation rather than force.\n§YPreferred governments:§! Any"
  hujiming_school:0 "Hujiming"
+ hujiming_school_modifier:0 "Hujiming Influences"
  hujiming_school_desc:0 "Followers of the Hujiming school believe that the power and status shouldn't come from heaven, gods or inheritance, but rather from the ones skill and efforts.\n§YPreferred governments:§! Republic, Plutocracy"
  taamtau_school:0 "Taamtau"
+ taamtau_school_modifier:0 "Taamtau Influences"
  taamtau_school_desc:0 "Followers of the Taamtau school believe that order is the highest priority, even at the cost of individual freedom.\n§YPreferred governments:§! Monarchy"
  senkoi_school:0 "Senkoi"
+ senkoi_school_modifier:0 "Senkoi Influences"
  senkoi_school_desc:0 "Followers of the Senkoi school believe that ruler shouldn't be detached from their people, but rather live with them.\n§YPreferred governments:§! Peasant Republic"
 
  can_pick_spirit_tt:0 "This ruler did NOT pick a spirit yet."
