--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -391,7 +391,7 @@
  xifang_rebels_army:0 "$RELIGION$ Army"
  xifang_rebels_demand:0 "Convert $COUNTRYNAME$"
 
- cach_moi:0 "Xifang"
+ cach_moi:0 "Cach Moi"
  cach_moi_religion_desc:0 "\nAll Hengtuan religions share a concept of Zheng, which represents ruler's legitimacy, competency and approval by heaven, but many scholars disagree on what is the most blessed government."
  cach_moi_rebels_title:0 "Religious"
  cach_moi_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -407,7 +407,7 @@
  gajifeng_spiritualism_rebels_army:0 "$RELIGION$ Army"
  gajifeng_spiritualism_rebels_demand:0 "Convert $COUNTRYNAME$"
 
- dejilobi:0 "Gajifeng Spiritualism"
+ dejilobi:0 "Dejilobi"
  dejilobi_religion_desc:0 ""
  henchu:0 "Henchu"
  dejilobi_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
